# rag-api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  ai_assistant.dockerfile  ai_assistant_worker.py  docker-compose.yml  document_indexing.dockerfile  document_indexing_worker.py  entrypoint.sh  example.env  main.py  pyproject.toml  requirements.txt
app/: ollama_llm.py
app/api/v1/routes/: chat.py  document.py
app/api/v1/schemas/: chat.py  common.py  document.py
app/db/: session.py  vector_store.py
app/db/models/: chat.py  document.py
app/db/repositories/: chat.py  document.py
app/utils/: logger.py
db/: __init__.py  connector.py
llm/: __init__.py  gemini_client.py  ollama_client.py  retrieval.py
pub_sub_consummer/: ai_assistant_consumer.py  document_indexing_consumer.py  pub_sub_consumer.py
rabbitmq/: ai_assistant.py  base.py  connect.py  document_indexing.py
rabbitmq/consumers/: __init__.py  ai_assistant.py  document_indexing.py
vector_store/: chunking.py  store.py
