[project]
name = "rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "google-cloud-pubsub>=2.29.0",
    "google-generativeai>=0.8.5",
    "psycopg>=3.2.6",
    "psycopg-pool>=3.2.6",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
